  * sign_out_all_scopes defaults to true as security measure
  * http authenticatable is disabled by default

* enhancements
  * Added OAuth 2 support
  * sign_out_via is available in the router to configure the method used for sign out (by github.com/martinrehfeld)
  * Improved Ajax requests handling in failure app (by github.com/spastorino)
  * Add reply-to to e-mail headers by default

* bugfix
  * after_sign_in_path_for always receives a resource
  * Updated the views generator to respect the rails :template_engine option (by github.com/fredwu)
  * Do not execute Warden::Callbacks on Devise::TestHelpers (by github.com/sgronblo)
  * Check the type of HTTP Authentication before using Basic headers

== 1.1.2

* bugfix
  * Compatibility with latest Rails routes schema

== 1.1.1

* bugfix
  * Fix a small bug where generated locale file was empty on devise:install

== 1.1.0

* enhancements
  * Rememberable module allows user to be remembered across browsers and is enabled by default (by github.com/trevorturk)
  * Rememberable module allows you to activate the period the remember me token is extended (by github.com/trevorturk)
  * devise_for can now be used together with scope method in routes but with a few limitations (check the documentation)
  * Support `as` or `devise_scope` in the router to specify controller access scope
  * HTTP Basic Auth can now be disabled/enabled for xhr(ajax) requests using http_authenticatable_on_xhr option (by github.com/pellja)

* bug fix
  * Fix a bug in Devise::TestHelpers where current_user was returning a Response object for non active accounts
  * Devise should respect script_name and path_info contracts
  * Fix a bug when accessing a path with (.:format) (by github.com/klacointe)
  * Do not add unlock routes unless unlock strategy is email or both
  * Email should be case insensitive
  * Store classes as string in session, to avoid serialization and stale data issues

* deprecations